# titanic-kaggle

./: pyproject.toml
notebooks/: experiment.ipynb  titanic.ipynb  titanic_kernel_ovi.ipynb
notebooks/.ipynb_checkpoints/: experiment-checkpoint.ipynb
