[tool.poetry]
name = "my-heart-will-go-on"
version = "0.1.0"
description = "Near. Far. Wherever I am."
authors = ["Dan Moore <dmoore@pillartechnology.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
pandas = "^0.25.3"
scikit-learn = "^0.21.3"
jupyter = "^1.0"
jupyterlab = "^1.2"
scipy = "^1.3"
seaborn = "^0.9.0"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
